# NexAur

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
source/Editor/: CMakeLists.txt  main.cpp
source/Editor/Panels/: InspectorPanel.h  Panel.h  SceneHierarchyPanel.h  ViewportPanel.h
source/Engine/: CMakeLists.txt  NexAur.h  engine.cpp  engine.h  pch.h
source/Engine/Core/: Base.h  Log.cpp  Log.h  UUID.cpp  UUID.h
source/Engine/Core/Events/: event.h  key_event.h  mouse_event.h  window_event.h
source/Engine/Core/Log/: log_system.cpp  log_system.h
source/Engine/Core/Module/: builtin_module_names.h  core_engine_module.cpp  core_engine_module.h  engine_module.h  module_manager.cpp  module_manager.h
source/Engine/Core/Time/: Clock.cpp  Clock.h  TimeStep.h
source/Engine/Editor/: editor_config.cpp  editor_config.h  editor_context.h  editor_layer.cpp  editor_layer.h  editor_module.cpp  editor_module.h  editor_services.h  editor_tool_state.h
source/Engine/Editor/Camera/: editor_camera.cpp  editor_camera.h
source/Engine/Editor/Commands/: editor_command.cpp  editor_command.h
source/Engine/Editor/Panels/: console_panel.cpp  console_panel.h  editor_panel.h  placeholder_panel.cpp  placeholder_panel.h  project_panel.cpp  project_panel.h  properties_panel.cpp  properties_panel.h  render_settings_panel.cpp  render_settings_panel.h  renderer_debug_panel.cpp  renderer_debug_panel.h  scene_hierachy_panel.cpp  scene_hierachy_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  viewport_panel.cpp  viewport_panel.h
source/Engine/Editor/Style/: editor_fonts.cpp  editor_fonts.h  editor_icons.h  editor_style.cpp  editor_style.h  editor_theme.cpp  editor_theme.h
source/Engine/Editor/Widgets/: editor_property_drawer.cpp  editor_property_drawer.h  editor_widgets.cpp  editor_widgets.h
source/Engine/Function/Audio/: audio_module.cpp  audio_module.h  audio_service.h  audio_system.h  audio_system_miniaudio.cpp
source/Engine/Function/File/: file_system.cpp  file_system.h  file_system_module.cpp  file_system_module.h
source/Engine/Function/Game/: game_module.cpp  game_module.h  game_state.cpp  game_state.h  gameplay_systems.cpp  gameplay_systems.h  prefab_factory.cpp  prefab_factory.h  runtime_camera_controller_system.cpp  runtime_camera_controller_system.h  runtime_hud.cpp  runtime_hud.h
source/Engine/Function/Global/: global_context.cpp  global_context.h
source/Engine/Function/Input/: input_action_module.cpp  input_action_module.h  input_action_system.cpp  input_action_system.h  input_state.h  input_system.h  input_system_glfw.cpp  input_system_glfw.h
source/Engine/Function/Input/KeyCode/: key_codes.h  mouse_codes.h
source/Engine/Function/Physics/: collision_query.cpp  collision_query.h  physics_types.h  trigger_overlap_system.cpp  trigger_overlap_system.h
source/Engine/Function/Platform/: platform_module.cpp  platform_module.h  platform_services.h  window_graphics_api.h  window_system.cpp
source/Engine/Function/Renderer/: camera.h  editor_camera.cpp  editor_camera.h  render_swap_context.h  renderer_debug_service.h  renderer_module.cpp  renderer_module.h  renderer_service.h  renderer_service_types.h  window_system.cpp  window_system.h
source/Engine/Function/Renderer/Passes/: container_pass.cpp  container_pass.h  floor_pass.cpp  floor_pass.h  interface_render_pass.cpp  interface_render_pass.h  shadow_pass.cpp  shadow_pass.h  shadow_pass_v2.cpp  shadow_pass_v2.h  skybox_pass.cpp  skybox_pass.h  skybox_pass_v2.cpp  skybox_pass_v2.h  sphere_pass.cpp  sphere_pass.h  triangle_pass.cpp  triangle_pass.h
source/Engine/Function/Renderer/RHI/: blend_state.h  buffer.cpp  buffer.h  constant.h  definitions.h  depth_stencil_state.h  flag_enum_micro.h  framebuffer.cpp  framebuffer.h  graphics_context.cpp  graphics_context.h  graphics_types.h  input_layout.h  material.cpp  material.h  material.h.cpp  pipeline_state.h  rasterizer_state.h  render_device.cpp  render_device.h  render_forward_pipeline.cpp  render_forward_pipeline.h  render_pass.cpp  render_pass.h  render_pass_context.h  render_pipeline.cpp  render_pipeline.h  renderer.cpp  renderer.h  renderer_API.cpp  renderer_API.h  renderer_command.cpp  renderer_command.h  renderer_service.h  renderer_service_types.h  renderer_system.cpp  renderer_system.h  shader.cpp  shader.h  texture.cpp  (+5 more)
source/Engine/Function/Renderer/Resources/: procedural_model_factory.cpp  procedural_model_factory.h  render_ibl_builder.cpp  render_ibl_builder.h  render_model_cache.cpp  render_model_cache.h  (+4 more)
source/Engine/Function/RendererV2/: render_scene_frame.h  render_scene_frame_builder.h  vulkan_draw_list.h  vulkan_draw_list_builder.cpp  vulkan_draw_list_builder.h  vulkan_render_data_translator.cpp  vulkan_render_data_translator.h  vulkan_render_resource_cache.cpp  vulkan_render_resource_cache.h  vulkan_render_target.h  vulkan_renderer_system.cpp  vulkan_renderer_system.h  vulkan_resource_context.h
source/Engine/Function/Resource/: asset_handle.h  asset_manager.cpp  asset_manager.h  asset_metadata.h  environment_map_asset.cpp  environment_map_asset.h  ibl_builder.cpp  ibl_builder.h  material_asset.cpp  material_asset.h  material_types.h  mesh.h  model.cpp  model.h  procedural_model_builder.cpp  procedural_model_builder.h  procedural_model_factory.cpp  procedural_model_factory.h  resource_module.cpp  resource_module.h  texture_asset.cpp  texture_asset.h  texture_loader.cpp  texture_loader.h  texture_types.h
source/Engine/Function/Scene/: collision_component.h  component.h  entity.cpp  entity.h  gameplay_component.h  runtime_module.cpp  runtime_module.h  scene.cpp  scene.h  scene_factory.cpp  scene_factory.h  scene_manager.cpp  scene_manager.h  scene_serializer.cpp  scene_serializer.h  scene_service.h  scene_v2.cpp  scene_v2.h
source/Engine/Function/UI/: ui_module.cpp  ui_module.h  ui_system.cpp  ui_system.h
source/Engine/TempTest/: TestWindow.cpp  TestWindow.h  triangle_test.cpp  triangle_test.h
source/Sandbox/: CMakeLists.txt  Sandbox.cpp  scene_test.cpp  scene_test.h  smoke_tests.cpp  smoke_tests.h
(+229 files in other folders)
